Fix overflow

--- a/styles/about.css
+++ b/styles/about.css
@@ -20,7 +20,7 @@ body, html {
     width: 100%;
     height: 100%;
     padding: 20px;
-    /* overflow-y: auto; */
+    /* overflow-y: auto;*/ 
 }
 
 /* Left Column */
@@ -36,7 +36,7 @@ body, html {
     width: 70%;
     padding: 20px;
     overflow-y: auto;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .static-content {
